add message at top indicating that this is an old website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,27 @@
     </style>
   </head>
   <body data-spy="scroll" data-target=".navbar">
+	<div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+                <div class="container">
+                <a class="brand" href="#">SIGpony</a>
+                <ul class="nav">
+                    <li class="divider-vertical"></li>
+                    <li><a href="#">This is an old SIGPwny website, created by a previous iteration of the club.</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+                <ul class="nav">
+                    <li class="divider-vertical"></li>
+                    <li class="alert-danger"><a href="#">This is a previous instance of the SIGPwny website, created by our predecessors.</a></li>
+                </ul>
+			</div>
+		</div>
+
         <div class="navbar-inner">
                 <div class="container">
                 <a class="brand" href="#">SIGpony</a>
