add link to main site

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="brand" href="#">SIGpony</a>
                 <ul class="nav">
                     <li class="divider-vertical"></li>
-                    <li><a href="#">This is an old SIGPwny website, created by a previous iteration of the club.</a></li>
+                    <li>This is an old SIGPwny website, created by a previous iteration of the club. The new website is <a href="https://sigpwny.com">located here</a></li>
                 </ul>
             </div>
         </div>
